Added argparse input to the circle.py

--- a/Day03/notebookday03.ipynb
+++ b/Day03/notebookday03.ipynb
@@ -2,34 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The area of the rectangle is: 6\n",
-      "The perimetr of the rectangle is: 10\n",
-      "The are of the circle is: 78.539815\n",
-      "The circumference of the circle is: 31.415926\n"
+      "Invalid input, please type \"circle\" or \"rectangle\"\n"
      ]
     }
    ],
    "source": [
-    "width = 2\n",
-    "length =  3\n",
-    "radius = 5\n",
-    "pi = 3.1415926\n",
-    "areaR = width*length\n",
-    "areaC = pi*radius**2\n",
-    "circR = 2*(length + width)\n",
-    "circC = 2*pi*radius\n",
+    "rectangle = False\n",
+    "circle = False\n",
     "\n",
-    "print(\"The area of the rectangle is:\", areaR)\n",
-    "print(\"The perimetr of the rectangle is:\", circR)\n",
-    "print(\"The are of the circle is:\", areaC)\n",
-    "print(\"The circumference of the circle is:\", circC)"
+    "choice = str(input('Please, choose the object: rectangle or circle'))\n",
+    "if choice == \"rectangle\":\n",
+    "\n",
+    "    rectangle = True\n",
+    "\n",
+    "    width = int(input('Please, enter width:'))\n",
+    "    length = int(input('Please, enter leng\"th:'))\n",
+    "\n",
+    "    areaR = width*length\n",
+    "    circR = 2*(length + width)\n",
+    "\n",
+    "    print(\"The area of the rectangle is:\", areaR)\n",
+    "    print(\"The perimetr of the rectangle is:\", circR)\n",
+    "\n",
+    "elif choice == \"circle\":\n",
+    "\n",
+    "    circle = True\n",
+    "\n",
+    "    radius = 5\n",
+    "    pi = 3.1415926\n",
+    "\n",
+    "    areaC = pi*radius**2\n",
+    "    circC = 2*pi*radius\n",
+    "\n",
+    "    radius = int(input('Please, enter the radius:'))\n",
+    "\n",
+    "    print(\"The are of the circle is:\", areaC)\n",
+    "    print(\"The circumference of the circle is:\", circC)\n",
+    "else:\n",
+    "    print('Invalid input, please type \"circle\" or \"rectangle\"')"
    ]
   }
  ],
