Dilution question added

--- a/Day03/notebookday03.ipynb
+++ b/Day03/notebookday03.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid input, please type \"circle\" or \"rectangle\"\n"
+      "The are of the circle is: 78.539815\n",
+      "The circumference of the circle is: 31.415926\n"
      ]
     }
    ],
